# Studienarbeit

./: notes.txt
Deployment/: intruder_detection_system.py  tensorrt_object_detector.py
Deployment/hardware_interaction/: __init__ copy.py  jetson_arduino_control.py
Deployment/interference_test/: time_stats.md
Detection_training/: .gitignore  EvaluateModel.ipynb  Mouse_Clicker.py  Preperation.ipynb  Training.ipynb  Training_coral_lite.ipynb  Training_yolo.ipynb  requirements.txt  train_yolo.py
Detection_training/Preperation/: Paths.py  Preperation.ipynb  preprocessing_data.py
Detection_training/Tensorflow/scripts/csv_to_xml/: Cargo.toml
Detection_training/Tensorflow/scripts/csv_to_xml/src/: main.rs
Dispostionspapier/: .gitignore  Dispo.tex  bibliographie.bib
Doku/: .gitignore  Studienarbeit.tex  bibliographie.bib
Doku/Datenblätter_skizzen/: Auto_accu.stl  hose_reduce_targeter.stl  jetson_case_cap.stl  jetson_case_mount.stl  jetson_nx_mount.stl  jetson_nx_mount_cap.stl  pumpe_spritzschutz_upper_part.stl  pumpe_spritzschutz_wall2.stl  pumpe_spritzschutz_wall_1.stl  pumpe_spritzschutz_walls.stl  schlauchschutz.stl  tube_holder_long.stl
Doku/ads/: abstract.tex  acronyms.tex  appendix.tex  deckblatt.tex  settings.tex
Implementation/: camera_setup.py  combination.py  contour_tracking.py  depths.py  normalize_test.py  onnx_run_test.py  setup_jetson.sh  test.py  testing_interference_speed.py  testing_loading_trt.py  time_stats.md  trying_cv2_onnx.py
ads/: abstract.tex  acronyms.tex  erklaerung.tex
content/: Einleitung.tex  Grundlagen.tex  Umsetzung.tex
(+68 files in other folders)
